<resources>
    <string name="app_name">TravelApp</string>
    <string name="back">Back</string>

    <string name="title_section1">Homepage</string>
    <string name="title_section2">Attraction List</string>
    <string name="title_section3">Travel Itinerary</string>
    <string name="title_section4">Map View</string>
    <string name="title_section5">Travel Journal</string>
    <string name="title_section6">Postcard</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="go">Go</string>
    <string name="travel_itinerary">Travel Itinerary</string>
    <string name="view_on_map">View on Map</string>
    <string name="budget">Budget</string>
    <string name="choose_the_places_you_want_to_visit">Choose the places you want to visit</string>
    <string name="generate_itinerary">Generate Itinerary</string>
    <string name="rs">Rs</string>
    <string name="your_list">Your List!</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="hi_traveller">Hi Traveller!</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="set_your_starting_point">Set your starting point</string>
    <string name="enter_budget">Enter Budget</string>
    <string name="enter_attraction">Enter Attraction</string>
    <string name="add">Add</string>
    <string name="search_box_hint">Enter a location</string>
    <string name="search_button">Search</string>
    <string name="change_view">Change View</string>
    <string name="itinerary">Itinerary</string>
    <string name="travel_journal">Travel Journal</string>
</resources>
