<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map" tools:context=".AttractionLocator"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/map_activity" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_box_hint"
        android:id="@+id/search_box"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_box">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:id="@+id/search_button"
            android:layout_below="@+id/search_box"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:typeface="monospace"
            android:textSize="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:text="@string/change_view"
            android:id="@+id/change_view_button"
            android:typeface="monospace"
            android:layout_below="@+id/search_box"
            android:layout_toEndOf="@+id/add_button"
            android:layout_width="wrap_content"
            android:textSize="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="match_parent"
            android:text="@string/itinerary"
            android:layout_weight="1"
            android:id="@+id/itinerary"
            android:typeface="monospace"
            android:layout_below="@+id/search_box"
            android:layout_toEndOf="@+id/change_view_button"
            android:layout_width="wrap_content"
            android:textSize="10dp" />
    </LinearLayout>

</RelativeLayout>