<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/indiagate"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView3" />

        <TextView
            android:text="@string/set_your_starting_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:id="@+id/textView7"
            android:layout_below="@+id/budgetText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/enter_your_name"
            android:layout_width="wrap_content"
            android:typeface="monospace"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/enter_your_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:typeface="monospace"
            android:layout_marginTop="9dp"
            android:layout_below="@+id/nameText"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameText"
            android:textSize="15sp"
            android:typeface="monospace"
            android:layout_marginTop="10dp"
            tools:ignore="LabelFor"
            android:textAlignment="center"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/budgetText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/budgetText"
            android:typeface="monospace"
            android:layout_marginTop="8dp"
            tools:ignore="LabelFor"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_below="@+id/textView9"
            android:layout_alignStart="@+id/originText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/originText"
            android:textSize="15sp"
            android:layout_marginTop="9dp"
            android:typeface="monospace"
            tools:ignore="LabelFor"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:textAlignment="center" />

        <Button
            android:text="@string/let_s_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/text1"
            android:typeface="monospace"
            android:layout_marginTop="25dp"
            android:id="@+id/nextActivityBtn"
            android:layout_below="@+id/originText"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</LinearLayout>